Fixws header line height and alignment

--- a/src/sections/FirstPage.css
+++ b/src/sections/FirstPage.css
@@ -4,7 +4,7 @@
   margin: 5px;
 }
 .heading {
-  line-height: 0px;
+  /* line-height: 0px; */
 }
 body {
   background: #333;
